2005-02-23  Tom Tromey  <tromey@redhat.com>

	* classobj.cc (get_descriptor): New methods.
	(create_one_field_record): Update.
	(create_method_throws): Likewise.
	(create_one_method_record): Likewise.
	(create_index_table): Likewise.

2005-02-22  Tom Tromey  <tromey@redhat.com>

	* builtins.cc (map_class_object): Mark class object as public.
	Set name of decl.
	(get_vtable_decl): Likewise.

2005-02-21  Tom Tromey  <tromey@redhat.com>

	* driver.cc (parse_file): Finalize compilation unit.
	* treegen.cc (generate): Update class_list.
	* hooks.hh (class_list): Declare.
	* decl.cc (class_list): New global.

2005-02-21  Tom Tromey  <tromey@redhat.com>

	* classobj.hh (class_object_creator::fill_in_vtable): Declare.
	* abi.cc (get_vtable): Updated.
	* abi.hh (gcj_abi::get_vtable): Removed 'lay_out' argument.
	(cxx_abi::get_vtable): Updated.
	(bc_abi::get_vtable): Updated.
	* classobj.cc (fill_in_vtable): New method.
	(create_class_instance): Use it.
	* builtins.hh (tree_builtins::get_vtable_decl): Declare.
	* builtins.cc (get_vtable_decl): Removed 'lay_out' argument.

2005-02-21  Tom Tromey  <tromey@redhat.com>

	* classobj.cc (create_one_method_record): Correctly compute
	"index" field.
	* abi.cc (get_vtable_index): New method.
	* abi.hh (gcj_abi::get_vtable_index): New method.
	(cxx_abi::get_vtable_index): Declare.
	(bc_abi::get_vtable_index): New method.

2005-02-21  Tom Tromey  <tromey@redhat.com>

	* builtins.cc (map_utf8const): Use 'type', not 'type_utf8const'.

	* abi.cc (build_class_reference): Wrote.

	* classobj.cc (create_class_instance): Use new get_vtable
	argument.
	* abi.cc (get_vtable): Updated.
	* abi.hh (gcj_abi::get_vtable): Added argument.
	(cxx_abi::get_vtable): Likewise.
	(bc_abi::get_vtable): Likewise.
	* builtins.cc (get_vtable_decl): Updated.
	* builtins.hh (tree_builtins::get_vtable): Added argument.

	* classobj.cc (handle_interfaces): Updated.
	(create_class_instance): Updated.
	* abi.cc (build_class_reference): Rewrote.